R293 In Review -> Done: approve build-warning cleanup
Reviewed the four implementation commits (fc03387, 6ab5127, 97fbc02) plus the
post-In-Review cf8262e. Full `mvn install -Plocal-db` is green and warning-free
under `-Xlint:all -Werror`; the only surviving log lines are the declared
out-of-scope environment ones (sandbox jOOQ PG-version mismatch, Maven's own
Guice/Unsafe JVM notes, the R294 BuildWarning-channel @nodeId/@asConnection
advisory).

Spec -> diff alignment holds: all four phases shipped. The generated-code casts
the spec slotted for narrowest-scope @SuppressWarnings were dropped via inference
instead (env.getArgument/env.getSource are <T> T), which follows the spec's
stated preference order over its mis-categorised example and reads as the tighter
emission the "Classifier guarantees shape emitter assumptions" principle wants.
The cf8262e Outcome.Success<element> pattern-match is a clean type-system
narrowing (Success<T> implements Outcome<T> makes the instanceof checked). Guard
landed globally on the parent pom rather than per-module: strictly stronger and
documented. jOOQ ambiguous keys resolved by disabling implicitJoinPathsToMany.

Reviewer session != implementer session. Delete the spec file; changelog entry
appended; README regenerated.

https://claude.ai/code/session_01MuSi2CDbd4mQQgejmjF6p7